fix layout issue on token pages

--- a/src/app/modules/bridge/components/ccx/ccx.component.scss
+++ b/src/app/modules/bridge/components/ccx/ccx.component.scss
@@ -1,5 +1,5 @@
 .container {
-	min-height: calc(100vh - 80px - 80px);
+	height: auto !important;
 }
 
 mat-horizontal-stepper {
